k8s/overlays/prod/blue/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: cinevision-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - cinevisionca.link
        - api.cinevisionca.link
