k8s/overlays/prod/blue/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: cinevision-blue
spec:
  gateways:
    - cinevision-gateway-blue
  hosts:
    - cinevisionca.link
    - api.cinevisionca.link
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: api-gateway-blue
            port:
              number: 80
          weight: 100
        - destination:
            host: api-gateway-green
            port:
              number: 80
          weight: 0
    - route:
        - destination:
            host: frontend-blue
            port:
              number: 80
          weight: 100
        - destination:
            host: frontend-green
            port:
              number: 80
          weight: 0
